# g923mac

./: .gitignore  CMakeLists.txt  README.md
bridge/include/: bridge_server.hpp  ffb_bridge_protocol.hpp
bridge/macos/: Info.plist.in  bridge_server.cpp  main.mm
bridge/macos/Resources/: G923Mac.icns
bridge/windows/: README.md  bridge_client.cpp  dinput8_proxy.cpp
bridge/windows/include/: bridge_client.hpp
bridge/windows/toolchains/: x86_64-w64-mingw32.cmake
include/: command.hpp  constants.hpp  device.hpp  force_feedback.hpp  force_feedback_config.hpp  plugin_manager.hpp  telemetry.hpp  types.hpp  utilities.hpp  wheel.hpp
include/scs/include/: scssdk.h
src/: command.cpp  device.cpp  force_feedback.cpp  plugin.cpp  plugin_manager.cpp  telemetry.cpp  types.cpp  utilities.cpp  wheel.cpp
